@@ -1,12 +1,6 @@
 import { splitsParserFromSettingsFactory } from './splitsParser/splitsParserFromSettings';
 import { syncManagerOfflineFactory } from './syncManagerOffline';
-import { SplitIO } from '../../types';
 
-// Singleton instance of the factory function for offline SyncManager from object (a.k.a. localhostFromObject)
+// Singleton instance of the factory function for offline SyncManager from object
 // SDK instances instantiate their SyncManagers with the same factory
-const localhostFromObject = syncManagerOfflineFactory(splitsParserFromSettingsFactory) as SplitIO.LocalhostFactory;
-localhostFromObject.type = 'LocalhostFromObject';
-
-export function LocalhostFromObject(): SplitIO.LocalhostFactory {
-  return localhostFromObject;
-}
+export const localhostFromObjectFactory = syncManagerOfflineFactory(splitsParserFromSettingsFactory);
